test: replace deprecated @MockBean with @MockitoBean and refactor to use builder pattern